Bugfix - height 100% doesn't work on safari
specified height of close icon in pixels instead

--- a/bikespace_frontend/src/components/dashboard/dashboard-header/dashboard-header.module.scss
+++ b/bikespace_frontend/src/components/dashboard/dashboard-header/dashboard-header.module.scss
@@ -64,8 +64,6 @@
       padding: 8px;
 
       img {
-        height: 100%;
-        width: 100%;
         max-width: 100%;
         max-height: 100%;
         object-fit: contain;
